[tool.poetry]
name = "advent_of_code_2023"
version = "0.1.0"
description = ""
authors = ["Tariq Ettaji <25740458+tettaji@users.noreply.github.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
